Improve pets, SQLite adventure data, effects, teams